fixed overlapping

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -63,7 +63,7 @@ p {
 .hero-img {
   max-height: 400px;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* Button
